# cpp-lightspeed

./: .gitignore  CMakeLists.txt  README.md
include/: lightspeed.h  types.h
include/dto/: Account.h  AccountMetafields.h  AccountPermissions.h  AccountRateLimits.h  Attribute.h  Blog.h  BlogArticle.h  BlogComment.h  Count.h  Language.h  Product.h  ProductAttribute.h  Resource.h  Type.h  TypesAttribute.h  Variant.h  webhook.h
include/dtos/: Account.h  Blog.h  Language.h  Product.h  Resource.h  TypesAttribute.h
include/endpoints/: account.h  products.h  webhook.h
src/: lightspeed.cpp
src/endpoints/: account.cpp  products.cpp  webhook.cpp
